# barkup

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init-letsencrypt.sh  nginx.conf  pyproject.toml
prompts/: eddie_angel.json  eddie_angel_v2.json  eddie_devil.json  eddie_favicon.json  eddie_logo_angel.json  eddie_logo_devil.json
scripts/: deploy.sh  download_model.py  setup_google_auth.py  test_local.py
src/barkup/: assessment.py  bark_classifier.py  config.py  db.py  episode_tracker.py  google_auth.py  main.py  migrate_notion.py  models.py  notion_logger.py  pubsub_listener.py  rtsp_stream.py  scheduler.py  sdm_client.py  snapshot.py  telegram_bot.py
src/barkup/web/: app.py
src/barkup/web/static/: style.css
src/barkup/web/templates/: about.html  base.html  config.html  dashboard.html  health.html  login.html  logs.html  public.html
tests/: test_episode_tracker.py
